[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Levels.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Levels" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="Levels"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.341176 )

[node name="CenterContainer" type="CenterContainer" parent="Levels"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Levels/CenterContainer"]
margin_left = 384.0
margin_top = 188.0
margin_right = 640.0
margin_bottom = 412.0
custom_constants/separation = 15
alignment = 1

[node name="Main Menu" type="Label" parent="Levels/CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "LEVELS"
align = 1

[node name="L0" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 1, 0, 0.984314, 1 )
margin_top = 29.0
margin_right = 256.0
margin_bottom = 49.0
rect_min_size = Vector2( 85, 0 )
text = "Tutorial: Paper Paraphernalia"

[node name="L1" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 64.0
margin_right = 256.0
margin_bottom = 84.0
rect_min_size = Vector2( 85, 0 )
text = "Level 1: Mathematic Mayhem"

[node name="L2" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 0, 0.835938, 1, 1 )
margin_top = 99.0
margin_right = 256.0
margin_bottom = 119.0
rect_min_size = Vector2( 85, 0 )
text = "Level 2: Mountains Beyond Mountains"

[node name="L3" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 0.12549, 1, 0, 1 )
margin_top = 134.0
margin_right = 256.0
margin_bottom = 154.0
rect_min_size = Vector2( 85, 0 )
text = "Level 3: The Art of Imagination"

[node name="L4" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 0.933333, 1, 0, 1 )
margin_top = 169.0
margin_right = 256.0
margin_bottom = 189.0
rect_min_size = Vector2( 85, 0 )
text = "Level 4: Chemical Wasteland"

[node name="Quit" type="Button" parent="Levels/CenterContainer/VBoxContainer"]
modulate = Color( 0.658824, 0.619608, 0.619608, 1 )
margin_top = 204.0
margin_right = 256.0
margin_bottom = 224.0
rect_min_size = Vector2( 85, 0 )
text = "Quit"

[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/L0" to="Levels" method="_on_L0_pressed"]
[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/L1" to="Levels" method="_on_L1_pressed"]
[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/L2" to="Levels" method="_on_L2_pressed"]
[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/L3" to="Levels" method="_on_L3_pressed"]
[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/L4" to="Levels" method="_on_L4_pressed"]
[connection signal="pressed" from="Levels/CenterContainer/VBoxContainer/Quit" to="Levels" method="_on_Quit_pressed"]
